@@ -224,6 +224,7 @@ L["Focus Frame"] = "Focus Frame"
 L["FocusTarget Frame"] = "FocusTarget Frame"
 L["Font Outline"] = "Font Outline"
 L["Fonts"] = "Fonts"
+L["Font"] = "Font"
 L["Font Size"] = "Font Size"
 L["Format"] = "Format"
 L["Frame"] = "Frame"
