@@ -1,6 +1,6 @@
 local E, L, P, G = unpack(select(2, ...)); --Inport: Engine, Locales, ProfileDB, GlobalDB
 local CH = E:NewModule('Chat', 'AceTimer-3.0', 'AceHook-3.0', 'AceEvent-3.0')
-
+local LSM = LibStub("LibSharedMedia-3.0")
 local CreatedFrames = 0;
 local lines = {};
 local msgList, msgCount, msgTime = {}, {}, {}
@@ -375,16 +375,20 @@ end
 function CH:EnableHyperlink()
 	for i = 1, NUM_CHAT_WINDOWS do
 		local frame = _G[format("ChatFrame%s", i)]
-		self:HookScript(frame, 'OnHyperlinkEnter')
-		self:HookScript(frame, 'OnHyperlinkLeave')		
+		if not self.hooks[frame] then
+			self:HookScript(frame, 'OnHyperlinkEnter')
+			self:HookScript(frame, 'OnHyperlinkLeave')
+		end
 	end
 end
 
 function CH:DisableHyperlink()
 	for i = 1, NUM_CHAT_WINDOWS do
 		local frame = _G[format("ChatFrame%s", i)]
-		self:Unhook(frame, 'OnHyperlinkEnter')
-		self:Unhook(frame, 'OnHyperlinkLeave')			
+		if self.hooks[frame] then
+			self:Unhook(frame, 'OnHyperlinkEnter')
+			self:Unhook(frame, 'OnHyperlinkLeave')
+		end
 	end
 end
 
@@ -413,8 +417,16 @@ end
 function CH:SetupChat(event, ...)	
 	for i = 1, NUM_CHAT_WINDOWS do
 		local frame = _G[format("ChatFrame%s", i)]
+		local _, fontSize = FCF_GetChatWindowInfo(frame:GetID());
 		self:StyleChat(frame)
 		FCFTab_UpdateAlpha(frame)
+		frame:SetFont(LSM:Fetch("font", self.db.font), fontSize, self.db.fontoutline)
+		if self.db.fontoutline ~= 'NONE' then
+			frame:SetShadowColor(0, 0, 0, 0.2)
+		else
+			frame:SetShadowColor(0, 0, 0, 1)
+		end
+		frame:SetShadowOffset((E.mult or 1), -(E.mult or 1))		
 	end	
 	
 	if self.db.hyperlinkHover then
@@ -428,12 +440,16 @@ function CH:SetupChat(event, ...)
 	if self.db.minWhisperLevel ~= 0 then
 		CH:EnableMinLevelWhisper()
 	end
-		
+
 	GeneralDockManager:SetParent(LeftChatPanel)
 	self:ScheduleRepeatingTimer('PositionChat', 1)
 	self:PositionChat(true)
-	self:SecureHook('FCF_OpenTemporaryWindow', 'SetupTempChat')
-
+	
+	if self.HookSecured then
+		self:SecureHook('FCF_OpenTemporaryWindow', 'SetupTempChat')
+		self.HookSecured = true;
+	end
+	
 	self:UnregisterEvent('UPDATE_CHAT_WINDOWS')
 	self:UnregisterEvent('UPDATE_FLOATING_CHAT_WINDOWS')
 end
