@@ -12,6 +12,8 @@
 *Add chat option to throttle messages in chat. So you don't see the same message in chat for 'X' amount of seconds.
 *Add chat option to automatically scroll to the bottom of the frame after 'X' amount of seconds.
 *Add chat option to block incoming whisper messages from players level 'X' and below.
+*Add chat option to allow changing of the font used.
+*Add chat option to allow changing of the font outline.
 *Add option under general settings to allow resizing of the Minimap.
 *Add option under general settings to enable/disable the Raid Reminder bar.
 
